--- a/Assets/Scripts/Core/Core.asmdef
+++ b/Assets/Scripts/Core/Core.asmdef
@@ -1,11 +1,7 @@
 {
-    "name": "MainGame",
+    "name": "Core",
     "rootNamespace": "",
-    "references": [
-        "GUID:3e6a906329534ff47986f201db2d398f",
-        "GUID:6055be8ebefd69e48b49212b09b47b2f",
-        "GUID:2384ece187b1001428e619abde2cd0bd"
-    ],
+    "references": [],
     "includePlatforms": [],
     "excludePlatforms": [],
     "allowUnsafeCode": false,
